Feat/migrate to activity listing (#6)
* feat: activity listing wip

* feat: migrate to list account activities

* chore: cleanup
